<resources>
    <string name="app_name">ant</string>
    <string name="Settings">Settings</string>

    <string name="action_settings">Settings</string>

    <string name="Setup">Setup</string>

    <string name="BoatLog">ant</string>
    <string name="About">About</string>
    <string name="Tutorial">Tutorial</string>
    <string name="Timers">Timers</string>
    <string name="Test">Test</string>
    <string name="More">More</string>

    <string name="Home">Close</string>
    <string name="surname">Surname</string>
    <string name="developedby">Developed by</string>
    <string name="usefullinks">Useful links</string>
    <string name="stevelovejoy">Steve Lovejoy</string>
    <string name="General">General</string>
    <string name="version">Version</string>

    <string name="Add_New_base">Add New Base</string>
    <string name="Add_New_node">Add New Node</string>
    <string name="edit">Edit</string>
    <string name="editBase">Edit</string>
    <string name="sure">Are you Sure?</string>
    <string name="save">Save</string>
    <string name="saveBase">Save</string>

    <string name="name">Name</string>

    <string name="delete">Delete</string>
    <string name="deleteNode">Delete Node</string>
    <string name="deleteBase">Delete Base</string>
    <string name="deleteTimer">Are you Sure?</string>
    <string name="warning">Warning!!!</string>
    <string name="yes">Confirm</string>
    <string name="no">Cancel</string>
    <string name="title_edit_Base">Edit Base</string>
    <string name="title_edit_Node">Edit Node</string>

    <string name="aboutversion">Version #</string>
    <string name="btnnameTV1">Edit Button Names</string>
    <string name="menubtnnameTV">Menu buttons</string>

    <string name="tutTV1">
        How to Setup Base Stations
    </string>
    <string name="tutTV2">
        1st setup port forwarding for all your base stations, see Links in the About screen.\n
        Next Press the + button on the Bases main screen.\n
        Enter your base stations name (maybe a room name).\n
        Enter your IPaddress (just google "my ip address").\n
        And finally Enter the port number printed on the base station.\n
        Press the Saved Button.\n
        Note: long press a base stations button allows you to edit and delete base stations.
    </string>
    <string name="tutTV3">
        How to Setup Nodes
    </string>
    <string name="tutTV4">
        Press a bases button on the main page (you need to create a base to attache a node to 1st).\n
        Press the + button. Fill in the data fields.\n
        Address is printed on the node.\n
        Node type is \"sw\" = a switch, \"rs\" = a room stat and \"dim\" = a dimmer switch.\n
        Sw Amount is the amount of switches you want to be shown for each node (max 4).\n
        The 4 Switch fields are for Naming each switch your using.\n
        Press the save button.
    </string>
    <string name="tutTV5">
        More info and instructions are linked in the About Section.
    </string>
    <string name="tutTV6">

    </string>
    <string name="tutTV7">

    </string>
    <string name="tutTV8">

    </string>

    <string-array name="sw_type_array">
        <item>Switch</item>
        <item>RoomStat</item>
    </string-array>

    <string-array name="sw_num_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="edit_reminder_title">Timer Reminder - Edit</string>
    <string name="no_reminders">No Timer Yet</string>
    <string name="menu_insert">Add Timer</string>
    <string name="menu_delete">Delete Timer</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Save</string>
    <string name="edit_reminder">Edit Timer</string>
    <string name="date">Timer Date</string>
    <string name="time">Timer Time</string>

    <!-- Toasts -->
    <string name="task_saved_message">Timer has been set</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">A timer needs to be reviewed!</string>
    <string name="notify_new_task_title">Timer Activated!</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">timer_default_category</string>
    <string name="pref_category_task_defaults_title">Timer Title Default</string>
    <string name="pref_task_title_key">default_Timer_title</string>
    <string name="pref_task_title_dialog_title">Default Timer Title</string>
    <string name="pref_task_title_message">The default title for a Timer.</string>
    <string name="pref_task_title_summary">Default title for Timers.</string>
    <string name="pref_task_title_title">Default Timer Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new timer should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a timer.</string>
    <string name="pref_default_time_from_now_title">Default Timer Time</string>

</resources>