<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/MRL1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryBackground">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar4"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:gravity="bottom"
            android:minHeight="?android:attr/actionBarSize"
            tools:context="com.ai.lovejoy777.ant.activities.AboutActivity">

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/imVie_AppLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_below="@+id/toolbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:elevation="5dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/tv_AppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imVie_AppLogo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:elevation="5dp"
            android:text="@string/BoatLog"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/actionbar_text_color" />

        <TextView
            android:id="@+id/tv_Version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_AppName"
            android:layout_centerHorizontal="true"
            android:elevation="5dp"
            android:text="@string/version"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/actionbar_text_secondary_color" />

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar4"
            android:background="@color/colorPrimaryBackground">

            <RelativeLayout
                android:id="@+id/RL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="0dp">

                <TextView
                    android:id="@+id/tv_caption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="16dp"
                    android:text="@string/developedby"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/accent" />

                <ListView
                    android:id="@+id/listView_Developer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_caption1"
                    android:layout_marginTop="16dp"
                    android:elevation="1dp" />

                <View
                    android:id="@+id/divider1"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_below="@+id/listView_Developer1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/divider" />

                <TextView
                    android:id="@+id/tv_caption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/divider1"
                    android:layout_marginTop="16dp"
                    android:text="@string/usefullinks"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/accent" />

                <ListView
                    android:id="@+id/listView_link1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/tv_caption2"
                    android:layout_marginTop="16dp"
                    android:elevation="1dp" />

                <View
                    android:id="@+id/divider2"
                    android:layout_width="fill_parent"
                    android:layout_height="1.0dip"
                    android:layout_below="@+id/listView_link1"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/divider" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorPrimaryBackground"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_view"
        android:theme="@style/NavigationViewTheme" />

</android.support.v4.widget.DrawerLayout>